--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         }
     ],
     "require": {
-        "tbbc/rest-util": "~1.0.1",
-        "symfony/framework-bundle": ">=2.0"
+        "tbbc/rest-util": "^1.1.0",
+        "symfony/framework-bundle": ">=5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
