--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
         }
     ],
     "require": {
-        "tbbc/rest-util": "^1.1.0",
-        "symfony/framework-bundle": ">=5.4"
+        "tbbc/rest-util": "^1.2.0",
+        "symfony/framework-bundle": ">=6.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "symfony/form": ">=5.4"
+        "phpunit/phpunit": "^10.5.1",
+        "symfony/form": ">=6.4",
+        "rector/rector": "^2.0",
+        "friendsofphp/php-cs-fixer": "^3.75"
     },
     "autoload": {
         "psr-0": { "Tbbc\\RestUtilBundle": "" }
@@ -30,5 +32,8 @@
     "target-dir": "Tbbc/RestUtilBundle",
     "config": {
         "bin-dir": "bin"
+    },
+    "scripts": {
+        "cs-fix": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix --config=.php-cs-fixer.dist.php"
     }
 }
